feat:userlogin components and responsive header

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,6 +43,9 @@
   .flex-center {
     @apply flex items-center justify-center;
   }
+  .sub-title{
+    @apply hidden absolute mr-0 top-7 min-w-[256px] py-5 px-6 child:my-4 bg-white text-zinc-700 group-hover:inline-block child-hover:text-green-500 rounded-2xl shadow-xl transition-all delay-75
+  }
 }
 body {
   font-family: "dana";
