--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,6 +56,17 @@
     background-color: #22c55e;
     border-radius: 50%;
   }
+  .price-line::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    top: 35%;
+    right: -5%;
+    height: 1px;
+    width: 100%;
+    background-color: #64748b;
+    border-radius: 100%;
+  }
   .submenu-hover {
     @apply hover:submenu-marker hover:text-green-500 hover:mr-4 transition-all duration-200;
   }
