--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,15 @@
   .submenu-hover {
     @apply hover:submenu-marker hover:text-green-500 hover:mr-4 transition-all duration-200;
   }
+  .banner-gradient {
+    background: rgb(126, 34, 206);
+    background: linear-gradient(
+      90deg,
+      rgba(126, 34, 206, 1) 0%,
+      rgba(190, 24, 93, 0.78) 45%,
+      rgba(251, 191, 36, 1) 100%
+    );
+  }
   .animation-open-menu {
     animation: openMenuAnim 0.1s linear 1 reverse backwards;
   }
