feat: developing blogs component and responsive

--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,6 @@
   }
 }
 @layer components {
-  .flex-center {
-    @apply flex items-center justify-center;
-  }
   .sub-title {
     @apply hidden absolute mr-0 top-7 min-w-[256px] py-5 px-6 child:my-4 bg-white text-zinc-700 group-hover:inline-block child-hover:text-green-500 rounded-2xl shadow-xl transition-all delay-75;
   }
@@ -145,6 +142,12 @@
     100% {
       opacity: 1;
     }
+  }
+
+}
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
   }
 }
 body {
